--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     </ul>
                 </li>
             </ul>
-            <img class="logo" src="media/logo.jpeg" alt="logo">
+            <img class="logo" src="https://github.com/Mahammad-Gurbanov/Our-website/blob/main/logo.jpeg" alt="logo">
         </nav>
         <hr>
     <header>
