--- a/team-members.html
+++ b/team-members.html
@@ -49,7 +49,7 @@
                     </ul>
                 </li>
             </ul>
-            <img class="logo" src="media/logo.jpeg" alt="logo">
+            <img class="logo" src="https://github.com/Mahammad-Gurbanov/Our-website/blob/main/logo.jpeg" alt="logo">
         </nav>
         <header>
             <div class="titleofwebpage">
@@ -60,28 +60,28 @@
         <main>
             <div id="gunay">
                 <h2><p>Gunay Shabiyeva</p></h2>
-                <img src="media/photo_5357135923055289894_y.jpg" alt="Photo of Gunay Shabiyeva">  
+                <img src="https://github.com/Mahammad-Gurbanov/Our-website/blob/main/photo_5357135923055289894_y.jpg" alt="Photo of Gunay Shabiyeva">  
                 <button onclick="showMessage('info1', 'Gunay Shabiyeva is 20 years old. She is a second-year student majoring in Computer Science at ADA University. She was admitted to ADA through the DIM exam, scoring 622. Her goal is to become a computer scientist specializing in microchip technology, contributing to innovative advancements in computing and electronics.')">More</button>
                 <p id="info1" style="display: none;"></p>
             </div>
 
             <div id="nuray">
                 <h2><p>Nuray Akbarli</p></h2>
-                <img src="media/photo_5345777491198994473_y (1).jpg" alt="Photo of Nuray Akbarli"> 
+                <img src="https://github.com/Mahammad-Gurbanov/Our-website/blob/main/photo_5345777491198994473_y%20(1).jpg" alt="Photo of Nuray Akbarli"> 
                 <button onclick="showMessage('info2', 'Nuray Akbarli is 18 years old. She is a second-year student majoring in Information Technology at ADA University. She was admitted to ADA through the SAT exam. Her biggest dream is to become a founder of a computer company.')">More</button>
                 <p id="info2" style="display: none;"></p>
             </div>
 
             <div id="mahammad">
                 <h2><p>Mahammad Gurbanov</p></h2>
-                <img src="media/photo_5345777491198994468_y (1).jpg" alt="Photo of Mahammad Gurbanov"> 
+                <img src="https://github.com/Mahammad-Gurbanov/Our-website/blob/main/photo_5345777491198994468_y%20(1).jpg" alt="Photo of Mahammad Gurbanov"> 
                 <button onclick="showMessage('info3', 'Mahammad Gurbanov is 17 years old. He is a first-year student majoring in Computer Science at ADA University. He was admitted to ADA through the DIM exam, scoring 676. His future goal is to become a professional in his major.')">More</button>
                 <p id="info3" style="display: none;"></p>
             </div>
 
             <div id="elvin">
                 <h2><p>Elvin Garabayli</p></h2>
-                <img src="media/photo_5345777491198994454_y (1).jpg" alt="Photo of Elvin Garabayli"> 
+                <img src="https://github.com/Mahammad-Gurbanov/Our-website/blob/main/photo_5345777491198994454_y%20(1).jpg" alt="Photo of Elvin Garabayli"> 
                 <button onclick="showMessage('info4', 'Elvin Garabayli is 17 years old. He is a first-year student majoring in Information Technology at ADA University. He was admitted to ADA through the SAT exam, scoring 1300 (math score of 800). His future goal is to become a professional developer and establish his own company.')">More</button>
                 <p id="info4" style="display: none;"></p>
             </div>
