--- a/web-project.html
+++ b/web-project.html
@@ -43,7 +43,7 @@
                 </ul>
             </li>
         </ul>
-        <img class="logo" src="media/logo.jpeg" alt="logo">
+        <img class="logo" src="https://github.com/Mahammad-Gurbanov/Our-website/blob/main/logo.jpeg" alt="logo">
     </nav>
         <style>p{
             padding: 0;
