Adding background image

--- a/hour-of-code.html
+++ b/hour-of-code.html
@@ -42,7 +42,7 @@
                         </ul>
                     </li>
                 </ul>
-                <img class="logo" src="https://github.com/Mahammad-Gurbanov/Our-website/blob/main/logo.jpeg" alt="logo">
+                <img class="logo" src="logo.jpeg" alt="logo">
             </nav>
             <hr>
             <header>
@@ -56,7 +56,7 @@
 
                 <!--Group photo-->
                 <figure>
-                    <img src="https://github.com/Mahammad-Gurbanov/Our-website/blob/main/grouphc.jpeg" alt="Our team-members and the classrom">
+                    <img src="grouphc.jpeg" alt="Our team-members and the classrom">
                     <figcaption>Us with our heartwarming and sincery community</figcaption>
                 </figure>
                 <hr>
@@ -67,8 +67,8 @@
                 <h2>What happend During the event?</h2>
                 <!--Pictures of us teaching-->
                 <figure class="show_images_in_line">
-                    <img alt="Mahammad and Gunay explaning exercise to the class" src="https://github.com/Mahammad-Gurbanov/Our-website/blob/main/mahammad%26gunayexplaningcode.jpeg">
-                    <img alt="Nuray and Elvin explaning exercise to the class" src="https://github.com/Mahammad-Gurbanov/Our-website/blob/main/elvin%26nurayexplaningcode.jpeg">
+                    <img alt="Mahammad and Gunay explaning exercise to the class" src="mahammad&gunayexplaningcode.jpeg">
+                    <img alt="Nuray and Elvin explaning exercise to the class" src="elvin&nurayexplaningcode.jpeg">
                 </figure>
                 <!--Read less/more block-->
 
@@ -125,7 +125,7 @@
                 <!--Info about Community-->
                 <h2>Our Community</h2>
                 <figure>
-                    <img src="https://github.com/Mahammad-Gurbanov/Our-website/blob/main/OurPhotoWithTeachers.jpeg" alt="Us with the teachers">
+                    <img src="OurPhotoWithTeachers.jpeg" alt="Us with the teachers">
                     <figcaption>A selfie with the teachers</figcaption>
                 </figure>
                 <p>
@@ -143,7 +143,7 @@
             <section id = "video">
                 <!--Engaging Video-->
                 <h2>Engaging Video from the Event</h2>
-                <video src="https://github.com/Mahammad-Gurbanov/Our-website/blob/main/VideofromHourofCodeEvent.mp4" controls>
+                <video src="VideofromHourofCodeEvent.mp4" controls>
                     Sorry video can't be opened
                 </video>
                 
