--- a/team-members.html
+++ b/team-members.html
@@ -49,7 +49,7 @@
                     </ul>
                 </li>
             </ul>
-            <img class="logo" src="https://github.com/Mahammad-Gurbanov/Our-website/blob/main/logo.jpeg" alt="logo">
+            <img class="logo" src="logo.jpeg" alt="logo">
         </nav>
         <header>
             <div class="titleofwebpage">
